fix heading spacing

--- a/styles.scss
+++ b/styles.scss
@@ -68,13 +68,15 @@ h1 {
     margin-bottom: 2.5rem;
     font-size: 2.5rem;
     letter-spacing: 1.5rem;
+    margin-right: -1.5rem; // fix the effect of letter spacing
     text-align: center;
 }
 
 h2 {
     margin-bottom: 1.6rem;
     font-size: 1.5rem;
-    letter-spacing: 0.5rem;
+    letter-spacing: .5rem;
+    margin-right: -.5rem; // fix the effect of letter spacing
     text-align: center;
 }
 
